name:                hyperdex
version:             0.1.0.0
synopsis:            An incomplete client library for the HyperDex key-value store.
description:
license:             BSD3
license-file:        LICENSE
author:              Sean Billig
maintainer:          sean.billig@gmail.com
category:            Database
build-type:          Simple
cabal-version:       >=1.8
homepage:	     https://github.com/sbillig/hyperdex-haskell
bug-reports:	     https://github.com/sbillig/hyperdex-haskell/issues

source-repository head
  type:	    	  git
  location: 	  https://github.com/sbillig/hyperdex-haskell

library
  exposed-modules:     Database.HyperDex.Internal
  build-depends:       base == 4.*,
                       bytestring >= 0.9 && < 0.11,
                       containers == 0.5.*,
                       monad-loops == 0.3.*
  build-tools:	       c2hs
  ghc-options:	       -Wall
  ghc-prof-options:    -auto-all
  extra-libraries:     hyperclient
--  includes:	       hyperclient.h
